convert/objects/Children__c.object
<CustomObject>
    <label>Children</label>
    <nameField>
        <displayFormat>CI-{0000}</displayFormat>
        <label>Children ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Childrens</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Entrance_Score__c</fullName>
        <label>Entrance Score</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Father_Name__c</fullName>
        <label>Father Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mother_Name__c</fullName>
        <label>Mother Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>Phone__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Email</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <label>Email</label>
    </listViews>
</CustomObject>